New Features: - Changed access token to 5 minutes - Changed refresh token to 1 day - Added redis for blacklistening old token - Added Logout - Added check on blacklistened tokens
