# internal/controller/jwt.go
@@ -1,22 +1,32 @@
 package controller
 
 import (
-	"encoding/json"
-
-	"github.com/taekwondodev/go-PassKey-Authentication/internal/customerrors"
-
 	"net/http"
 
 	"github.com/taekwondodev/go-PassKey-Authentication/internal/dto"
 )
 
 func (c *controller) Refresh(w http.ResponseWriter, r *http.Request) error {
-	var req dto.RefreshTokenRequest
-	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
-		return customerrors.ErrBadRequest
+	req, err := decodeAndValidate[*dto.TokenRequest](r)
+	if err != nil {
+		return err
 	}
 
-	res, err := c.authService.Refresh(req)
+	res, err := c.authService.Refresh(r.Context(), *req)
+	if err != nil {
+		return err
+	}
+
+	return c.respond(w, http.StatusOK, res)
+}
+
+func (c *controller) Logout(w http.ResponseWriter, r *http.Request) error {
+	req, err := decodeAndValidate[*dto.TokenRequest](r)
+	if err != nil {
+		return err
+	}
+
+	res, err := c.authService.Logout(r.Context(), *req)
 	if err != nil {
 		return err
 	}
